Fix border-radius of header buttons
The last update of the button styles messed up the border-radius of several header buttons, which is now fixed.

--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -61,6 +61,7 @@
 
 .tify-header_button {
 	@extend %button;
+	border-radius: 0;
 	box-shadow: none;
 
 	& + & {
@@ -74,6 +75,10 @@
 
 	&:last-child {
 		border-radius: 0 $br $br 0;
+	}
+
+	&:only-child {
+		border-radius: $br;
 	}
 
 	&.-active {
